# feiyi-heritage-ai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SUBMISSIONS.md  app.py  pyproject.toml  requirements.txt
.forgejo/workflows/: update-submission-index.yml
.streamlit/: config.toml
data/catalog/: heritage_products.csv
data/demo/: customization_options.csv  heritage_items.csv  merchants.csv  product_texts.csv  products.csv
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md  RECOMMENDATION_DESIGN.md  WAVE2_SKILLS.md
docs/wave2/: COMPLIANCE.md  DEMO_CASE.md  EVALUATION.md  PR_DESCRIPTION.md  README.md  WORKFLOW.md
docs/wave2/skills/: 01-conversational-gift-request-understanding.md  02-progressive-heritage-gift-recommendation.md  03-grounded-bilingual-heritage-content.md  04-merchant-ready-customization-brief.md
src/heritagelink/: __init__.py  catalog.py  config.py  content.py  conversation_state.py  customization_concept.py  data_loader.py  dialogue_manager.py  dialogue_prompt.py  inquiry.py  llm_client.py  models.py  progressive_recommender.py  recommender.py  request_parser.py
src/heritagelink/ui/: __init__.py  catalog_gallery.py  components.py  inquiry_summary.py  product_card.py  requirements.py  theme.py
tests/: conftest.py  evaluation_cases.json  test_app_smoke.py  test_catalog.py  test_catalog_app.py  test_content.py  test_customization_concept.py  test_data_loader.py  test_dialogue_manager.py  test_imports.py  test_inquiry.py  test_llm_client.py  test_progressive_recommender.py  test_recommender.py  test_request_parser.py
tests/fixtures/: README.md
