[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "heritagelink-ai"
version = "0.1.0"
description = "Progressive heritage gift recommendation core for 飞颐礼遇"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.68,<3.0",
    "pandas>=2.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "streamlit>=1.41,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
